--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <title>STORMY</title>
 </head>
 <body>
-  
+  <header>
+      <h2 class="logo">STORMY</h2>
+  </header>
+        <div class="content">
+            <div class="text">
+                <h1>Global weather at your fingertips.</h1>
+            </div>
+            <input type="text" id="city_input">
+            <button type="submit" id="submit_city">Find weather</button>
+        </div>
 </body>
 </html>
